# data_graph

./: README.md  docker-compose.neo4j.yml  pyproject.toml
.cursor/rules/: agent.md
.cursor/rules/prompts/: agent.md  data_ingestion_agent.md  entity_extraction_agent.md  graph_builder_agent.md  graph_query_agent.md  graph_visualization_agent.md  infrastructure_agent.md  reflection_agent.md  semantic_enrichment_agent.md
.github/workflows/: ci.yml
data_graph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/: ingest_news_article.py
graph/ingestion/: __init__.py  cypher.py  extract.py  neo4j_client.py  pipeline.py  state.py
tests/: test_article_ingestion.py
