[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-graph"
version = "0.1.0"
description = "Minimal LangGraph → Neo4j ingestion pipeline (news article → graph)"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2",
  "neo4j>=5.14",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.7",
]

[tool.setuptools.packages.find]
include = ["graph*", "tests*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: tests that require a live Neo4j (enabled in CI)",
]

